<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/projectThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:transitionName="shared"
                android:src="@drawable/placeholder_thumbnail"
                android:contentDescription="@string/thumbnail"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/dummy_title"
                android:textColor="@color/colorPrimary"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/ownedByTextView"
                android:layout_below="@id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/owned_by"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:layout_below="@+id/ownedByTextView"
                >

                <TextView
                    android:id="@+id/amountSpended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/amount"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_toEndOf="@+id/amountSpended"
                    android:id="@+id/endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:paddingStart="0dp"
                    android:paddingEnd="2dp"
                    android:text="@string/end"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>


        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>